Finish corrections in homepage overflow

--- a/src/styles/abstracts/_global.scss
+++ b/src/styles/abstracts/_global.scss
@@ -1,10 +1,6 @@
 @use "./variables" as *;
 @use "./mixins" as *;
 
-html {
-  overflow-x: hidden;
-}
-
 * {
   box-sizing: border-box;
 }
