--- a/src/styles/components/_pricing-card.scss
+++ b/src/styles/components/_pricing-card.scss
@@ -18,8 +18,10 @@
     position: absolute;
     background-color: $color-primary;
     color: $color-white;
-    width: 173px;
-    height: 40px;
+    padding-inline: 24px;
+    padding-block: 6px;
+    max-width: 200px;
+    max-height: 200px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
     top: 0;
