--- a/src/styles/layouts/_blog.scss
+++ b/src/styles/layouts/_blog.scss
@@ -46,10 +46,17 @@
     display: flex;
     flex-direction: column;
     gap: $gap-xl;
+    overflow-x: hidden;
 
     @include tablet {
       flex-direction: row;
       justify-content: center;
+    }
+
+    @include tablet {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(auto-fit, 1fr);
     }
   }
 }
