--- a/src/styles/layouts/_faq.scss
+++ b/src/styles/layouts/_faq.scss
@@ -13,7 +13,6 @@
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    z-index: 0;
 
     @include desktop {
       margin-top: 127px;
@@ -23,7 +22,7 @@
       content: "";
       position: absolute;
       top: 164px;
-      left: 400px;
+      left: 300px;
       width: 689px;
       height: 498px;
       border-radius: 50%;
