--- a/src/styles/layouts/_product.scss
+++ b/src/styles/layouts/_product.scss
@@ -3,6 +3,15 @@
 
 .product {
   margin-bottom: 28px;
+  padding-left: 16px;
+
+  @include tablet {
+    padding-inline: 40px;
+  }
+
+  @include desktop {
+    padding-inline: 80px;
+  }
 
   &__list {
     padding-block: $space-base;
@@ -12,9 +21,13 @@
     gap: $gap-base;
     padding-inline: 0;
     max-width: 100vw;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     @include desktop {
+      overflow: unset;
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-template-rows: repeat(auto-fit, minmax(0, 1fr));;
       gap: $gap-xl;
     }
   }
