--- a/src/styles/layouts/_trending.scss
+++ b/src/styles/layouts/_trending.scss
@@ -3,9 +3,15 @@
 
 .trending {
   margin-top: $space-3xl;
+  padding-left: 16px;
 
   @include tablet {
     margin-top: 100px;
+    padding-left: 40px;
+  }
+
+  @include desktop {
+    padding-inline: 80px;
   }
 
   &__primary-title {
